...
          paddingVertical: 8,
          paddingHorizontal: 20,
          backgroundColor: 'skyblue',
          borderRadius: 5,
        }}
      >
        <Text style={{ color: 'white', fontSize: 16, textAlign: 'center' }}>Back</Text>
      </TouchableOpacity>
      <View style={{ flexDirection: 'row', margin: 'auto' }}>
          <TouchableOpacity 
            activeOpacity={0.8}
            disabled={countToNotify <= 1}
            onPress={() => handleNumberOfMems(Number(countToNotify) - 1)}
...
            }}
            testID={`counter_1-decrease`}
          >
              <Text style={{ fontWeight: 'bold' }}>-</Text>
          </TouchableOpacity>
          <Text 
            testID={`counter_1-count`}
            style={{
              textAlign: 'center',
              padding: 10,
            }}
          >{countToNotify}</Text>
          <TouchableOpacity 
...
