appId: app.maestro.expo.testing
onFlowComplete:
  - tapOn: Back
---

- assertVisible:
    text: Expo Testing App

- tapOn: Counter

- assertVisible:
    text: 3

- assertVisible:
    id: counter_1-count
    text: 3